# fierylib

./: .env.example  .gitignore  PHANTOM_REFERENCES_REPORT.md  README.md  create_spell_seeds.py  custom-item-analysis.md  import_failures.txt  package-lock.json  package.json  player-import-audit.md  pyproject.toml  remaining_work.md  requirements.txt  test_layout.py  trigger_errors_report.html  trigger_syntax_errors_report.md
data/: abilities.json  classes.json  damage_component_mappings.json  effects.json  forms.json  magic_affinities.json  races.json  vnum_map.json
data/triggers/: REVIEW_STATUS.md  quest_helpers.lua
examples/: import_zones.py
prisma/: enums.prisma
scripts/: README.md  add_look_messages_to_json.py  add_missing_effects.py  add_spell_colors.py  author_saving_throws.py  backfill_object_resistance.py  convert_abilities.py  convert_doors_api.py  convert_vnums.py  export_to_json.py  extract_ability_messages.py  fix_legacy_vnums.py  fix_math_fallbacks.py  full_reset_and_import.sh  generate_ability_mapping.py  generate_object_effects_mapping.py  generate_prisma_enums.py  generate_status_mapping.py  merge_duplicate_abilities.py  merge_spell_metadata.py  migrate_object_affects.py  prisma_generate.sh  rebalance_cast_times.py  reset_db.sh  seed_consumable_effects.py  seed_recall_scrolls.py  update_class_combat_stats.py  validate_effects_idl.py  validate_lua_triggers.py
tests/: test_color_converter.py  test_color_converter_v1_backup.py  test_id_converter.py  test_layout.py  test_player_importer.py  test_room_importer_exits.py  test_zone_importer.py
(+3068 files in other folders)
