[tool.poetry]
name = "fierylib"
version = "0.1.0"
description = "FieryMUD legacy data importer - converts CircleMUD text files to PostgreSQL"
authors = ["FieryMUD Team"]
readme = "README.md"
packages = [{include = "fierylib", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
prisma = "^0.11.0"
click = "^8.1.7"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
bcrypt = "^4.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
ruff = "^0.1.9"

[tool.poetry.scripts]
fierylib = "fierylib.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
